API: update various endpoints
- Deprecated POST/DELETE /account;
- Replaced `/syncing` with `/syncing-status`;
- Added `/create-account`;
- Added `/delete-account`.
